<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_launch_pkg</name>
  <version>0.0.1</version>
  <description>Launch files example package</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <exec_depend>my_first_pkg</exec_depend>
  <exec_depend>my_second_pkg</exec_depend>
  <exec_depend>my_params_pkg</exec_depend>

  <test_depend>ament-copyright</test_depend>
  <test_depend>ament-flake8</test_depend>
  <test_depend>ament-pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
